<resources>
    <string name="app_name">Parking App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_visitors">Verify Visitors</string>
    <string name="announce_visitors">Announce Visitor</string>
    <string name="profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="about_app">About App</string>
    <string name="logout">Log out</string>
    <string name="submit">Submit</string>
    <string name="about_text">SeQuApp is a security platform in which automation of security processes are automated to make management of guests is quick and efficient.</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="below_is_the_biodata_of_the_user">Below is the biodata of the visitor.</string>
    <string name="name">First Name</string>
    <string name="national_id">National ID</string>
    <string name="phone">Phone Number</string>
    <string name="date_of_visit">Date of Visit</string>
    <string name="vehicle_reg">Vehicle Registration</string>
    <string name="time">Time of Visit</string>
    <string name="person_visiting">Person Visiting</string>
    <string name="announce_visitor">Announce Visitor</string>
    <string name="verify_visitor">Verify Visitor</string>
    <string name="active_visits">Active Visits</string>
</resources>